# 3dEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clean.bat  generate.bat  open.bat  open_doc.bat  premake5.lua
.github/workflows/: build.yml  c-cpp.yml  cmake.yml  codeql.yml  doxygen.yml  submodule.yml
Engine/: CMakeLists.txt
Engine/docs/: CMakeLists.txt  Doxyfile  header.html  test.md
Engine/src/: Engine.h  Engine.hpp  pch.hpp
Engine/src/Engine/Core/: Application.cpp  Application.h  Application.hpp  EntryPoint.h  EntryPoint.hpp  Log.cpp  Log.h  Log.hpp  Window.cpp  Window.h  Window.hpp
Engine/src/Engine/Entity/: EntityManager.cpp  EntityManager.h  EntityManager.hpp  ShapeSystem.hpp  System.cpp  System.hpp
Engine/src/Engine/Entity/Components/: Circle.hpp  Color.hpp  Drawable.cpp  Drawable.hpp  Position.hpp  Rectangle.hpp  Renderable.cpp  Renderable.hpp  RenderableComp.hpp  RenderableComponent.hpp  Triangle.hpp
Engine/src/Engine/Entity/Extenders/: Renderable.hpp
Engine/src/Engine/Entity/Systems/: CircleSystem.hpp  DrawableSystem.cpp  DrawableSystem.hpp  DynamicDrawableSystem.cpp  DynamicDrawableSystem.hpp  RectangleSystem.hpp  RenderableSys.hpp  TriangleSystem.hpp
Engine/src/Engine/Events/: Event.h  Event.hpp  Input.cpp  Input.h  Input.hpp  Key.h  Key.hpp
Engine/src/Engine/Math/: General.hpp  Vector.hpp  Vertex.hpp
Engine/src/Engine/Renderer/: Device.cpp  Device.h  Device.hpp  ImmediateContext.cpp  ImmediateContext.h  ImmediateContext.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  SwapChain.cpp  SwapChain.h  SwapChain.hpp  imgui.cpp  imgui.h  imgui.hpp
Engine/src/Engine/Renderer/brtshaderc/: brtshaderc.cpp  brtshaderc.h
Engine/src/Engine/Renderer/imgui/: fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  vs_ocornut_imgui.bin.h
Engine/src/Engine/Util/: Timer.hpp
Engine/src/example/: example.h  logo.h
Sandbox/src/: main.cpp  v_simple.sc
